adding all files

--- a/RESUME.html
+++ b/RESUME.html
@@ -1,9 +1,67 @@
 <html>
 <head>
 	<title>Resume project</title>
+	<meta name="viewport" content="width=device-width",intial-scale="1.0">
+	<link rel="stylesheet" href="main.css">
 </head>
 <body>
-	<h1>this is my first project</h1>
-	<h2>guyg7uyh</h2>>
+<div class="main">
+	<div class="left">
+		<img src="image1.png" alt="profile image">
+		<h3 style="color:brown;font font-size: 40px">bhavani</h3>
+		<h3 id="number">+91-985667456</h3>
+		<a style="font-size:40px" href="mailto:bhavanin.reddy2000@gmail.com">bhavanin.reddy2000@gmail.com</a>
+		<h1>address</h1>
+		<hr style="border-color:red">
+		<p>vignan's nirula</p>
+	</div>
+	<div class="right">
+		<h2 style="color:red;font-size:40px">
+		career objective</h2>
+		<p>to become java developer</p>
+		<div class="table1">
+		<table border="1">
+				<tr>
+					<th>qualification</th>
+					<th>institute</th>
+					<th>year of passing</th>
+					<th>percentage</th>
+				</tr>
+				<tr>
+					<td>btech</td>
+					<td>vignan's nirula</td>
+					<td>2020</td>
+					<td>89</td>
+				</tr>
+				<tr>
+					<td>inter</td>
+					<td>scholars</td>
+					<td>2016</td>
+					<td>96</td>
+				</tr>
+		</table>	
+	</div>
+		<h2 educational qualification</h2>
+			<hr>
+			
+			<h2>technical skills</h2>
+			<hr>
+			<h4 style="color:red">programming languages:</h4>
+			<ul>
+				<li>c</li>
+				<li>c++</li>
+				<li>java</li>
+				<li>sql</li>
+			</ul>
+			<h4 style="color:red">hmax:</h4>
+			<ul>
+				<li>got rank in our college</li>
+			</ul>
+
+
+
+
+	</div>
+</div>
 </body>
 </html>
